<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/backgroubcolor"
    android:layout_height="match_parent"
    tools:context=".Create">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/singup1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:contentDescription="@null"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/login2" />

    <TextView
        android:id="@+id/textView4"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_light"
        android:text="@string/create_account"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/UserLayout"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#673AB7"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:textColorHint="@color/HintText"
        android:layout_marginStart="48dp"
        app:endIconMode="clear_text"
        android:hint="@string/user_name"
        android:layout_marginEnd="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="33dp"
        app:startIconDrawable="@drawable/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/UserText"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/EmailLayout"
        android:layout_height="wrap_content"
        app:boxStrokeColor="#673AB7"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:textColorHint="@color/HintText"
        android:layout_marginStart="48dp"
        app:helperTextTextColor="@color/red"
        app:endIconMode="clear_text"
        android:hint="@string/email"
        android:layout_marginEnd="48dp"
        app:layout_constraintTop_toBottomOf="@id/UserLayout"
        android:layout_marginTop="20dp"
        app:startIconDrawable="@drawable/email"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/EmailText"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PassLayput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/password"
        android:textColorHint="@color/HintText"
        app:boxStrokeColor="#673AB7"
        app:endIconCheckable="true"
        app:endIconMode="password_toggle"
        app:helperTextTextColor="@color/red"
        app:endIconTint="@color/HintText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailLayout"
        app:startIconDrawable="@drawable/vector">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PassText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/re_PassLayput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/HintText"
        app:boxStrokeColor="#673AB7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PassLayput"
        app:startIconDrawable="@drawable/vector">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/re_PassText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/Create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PassLayput"
        app:srcCompat="@drawable/wellcome_to_login" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend_light"
        android:text="@string/Create"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/Create"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/Create" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="36dp"
        android:text="@string/or_create_account_using_social_media"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Create" />

</androidx.constraintlayout.widget.ConstraintLayout>